# Ice_Project

./: BondAnalysis.py  FSDP.py  LAMMPSTRJ_to_XYZ_converter.py  RDF_contour.py  README.md  bond_map.py  cif_to_lmp.py  fft_parquet_HOH.py  fft_sum.py  full_ring_stats.py  lammpstrj_to_xyz.py  lammpstrj_to_xyz_V3.py  lmp_to_xyz.py  output_to_parquet.py  ring_stats.py  supercell_subdividor_GPU_boosted.py
Advanced ring stats example/: Convert_and_split_trj.py  HDF5_to_contour.py  Make_Raw_PDs.py  README.txt
Advanced_Rings_Example/: ReadMe  ReadMe.md  Ring_PCA_analysis.py  Run_PCA.py  resolution_scan.py
Converter_scripts/: LAMMPSTRJ_to_XYZ_converter.py  ReadMe.md  lammpstrj_to_xyz_V3.py  lmp_to_xyz.py
Ffmchem/: ReadMe.md  cif_to_lmp.py  cif_to_xyz.py  cli.py  gro_to_xyz.py  lammpstrj_to_modified_xyz.py  lmp_to_cif.py  lmp_to_xyz.py  pyproject.toml  xyz_to_cif.py  xyz_to_gro.py  xyz_to_lmp.py
Ffmchem/examples/: 0kbar_init.cif  0kbar_init.xyz  Ice1h.gro  IceIV_ortho_x464.lmp
File_Converter_Tool/: ReadMe.md  cif_to_lmp.py  lammpstrj_to_xyz.py  lmp_to_cif.py  lmp_to_modified_xyz.py  lmp_to_xyz.py  xyz_to_lmp.py
Ring_stats_example/: HDA_22d5kbar only H.xyz  HDA_22d5kbar only O.xyz  HDA_22d5kbar.xyz  PD polygon mask coords.txt  READ_ME.txt
Void_statistics_example/: Batch_voidstats.py  ReadMe.md  Void_statistics.py
Void_statistics_example/Input_files/: 0kbar_init.xyz  12kbar_compress.xyz  18kbar_compress.xyz  22d5kbar_compress_p1.xyz  22d5kbar_compress_p2.xyz  22d5kbar_compress_p3.xyz  22d5kbar_compress_p5.xyz  6kbar_compress.xyz  Recompress_0kbar_p1.xyz  (+9 more)
